--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Freelance Development</h3>
+	   					<h3>Freelance Developer</h3>
 	   					<p></p>
 	   				</div>
 
@@ -304,7 +304,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<p>July 2013 - May 2014</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -322,7 +322,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<p>July 2007 - May 2011</p>
 	   				</div>
 
 	   				<div class="timeline-content">
