--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>A versatile developer who can work all around the technology stack and always open to explore and work on new tecnologies.</p>
+   			<p>A versatile developer who can work all around the technology stack and always open to explore and work on new technologies.</p>
 
 				<ul class="skill-bars">
 				   <li>
