updated email address

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>praveen4890@gmail.com</span>
+   					<span>me@praveenkumar.io</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -680,7 +680,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>praveen4890@gmail.com<br>
+   			<p>me@praveenkumar.io<br>
 
 			   </p>
 
@@ -719,7 +719,7 @@
 			      <li><a href="https://sg.linkedin.com/in/praveen4890" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 			      <li><a href="https://github.com/praveen4890" target="_blank"><i class="fa fa-github"></i></a></li>
 			      <li><a href="https://twitter.com/praveen4890" target="_blank"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="mailto:oraveen4890@gmail.com"  target="_blank"><i class="fa fa-envelope"></i></a></li>
+			      <li><a href="mailto:me@praveenkumar.io"  target="_blank"><i class="fa fa-envelope"></i></a></li>
 			   </ul>
 
 	      </div>
