font awesome icon email

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li><a href="https://sg.linkedin.com/in/praveen4890" target="_blank"><i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://github.com/praveen4890" target="_blank"><i class="fa fa-github"></i></a></li>
       <li><a href="https://twitter.com/praveen4890" target="_blank"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="mailto:oraveen4890@gmail.com"  target="_blank"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="mailto:me@praveenkumar.io"  target="_blank"><i class="fa fa-envelope"></i></a></li>
       </ul> <!-- /intro-social -->
 
    </section> <!-- /intro -->
