--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>A Software engineer with a masters degree in Computer Science and 4 years of work experience developing web applications in Java.</p>
+   			<p>A Software engineer with a masters degree in Computer Science and 5 years of work experience developing web applications in Java.</p>
 
    			<ul class="info-list">
    				<li>
@@ -132,8 +132,8 @@
    					<span>Praveen Kumar N V</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>August 4th 1990</span>
+   					<strong>Age:</strong>
+   					<span>27</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
@@ -205,7 +205,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">During my 4 years in the IT industry I have been a client and a vendor, I have been a backend developer and also a frontend developer. I have worked in projects with a waterfall model and I have been a part of an agile team. Experiencing both sides of a coin is always sweet!</p>
+   			<p class="lead">Being a part of this Software Industry for several years, I have been a client and a vendor, I have been a backend developer and also a frontend developer. I have worked in projects with a waterfall model and I have been a part of an agile team. Experiencing both sides of a coin is always sweet!</p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -222,6 +222,25 @@
 
    			<div class="timeline-wrap">
 
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Software Enigineer</h3>
+	   					<p>Feb 2017 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>AdNovum, Singapore</h4>
+	   					<p>Involved in Java web development projects using Magnolia CMS and technology integration with Nevis Security Suite (AdNovum's product)</p>
+              <p><b>Technologies: </b>Java, Magnolia, Nevis Security Suite</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+				
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -230,7 +249,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>IT Analyst</h3>
-	   					<p>July 2014 - Present</p>
+	   					<p>July 2014 - Jan 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
