--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Adobe AEM/CQ5</strong>
+				   	<strong>CMS (Adobe AEM, Magnolia)</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent60"><span>60%</span></div>
