--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Software Enigineer</h3>
+	   					<h3>Software Engineer</h3>
 	   					<p>Feb 2017 - Present</p>
 	   				</div>
 
