--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	   			<h1>I'm Praveen.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Full Stack Web Applications Developer</span>
+	   				<span>Full Stack Developer</span>
 	   				<span>Thinker</span>
 	   			</p>
 
@@ -124,7 +124,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>A Software engineer with a masters degree in Computer Science and 5 years of work experience developing web applications in Java.</p>
+   			<p>A Software engineer with a masters degree in Computer Science and nearly 7 years of experience developing public facing web applications.</p>
 
    			<ul class="info-list">
    				<li>
@@ -133,11 +133,11 @@
    				</li>
    				<li>
    					<strong>Age:</strong>
-   					<span>27</span>
+   					<span>28</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Web Applications Developer</span>
+   					<span>Senior Software Engineer</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -145,7 +145,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@praveenkumar.io</span>
+   					<span>praveen4890@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -159,24 +159,24 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<!--<div class="progress percent90"><span>90%</span></div> -->
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Web Services REST & SOAP</strong>
+				   	<!--<div class="progress percent80"><span>80%</span></div> -->
+				   	<strong>Frontend Development - HTML, CSS, Angular</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Frontend Development</strong>
+				   	<!--<div class="progress percent80"><span>80%</span></div> -->
+				   	<strong>Security, IAM Solutions</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<!--<div class="progress percent80"><span>80%</span></div> -->
 				   	<strong>CMS (Adobe AEM, Magnolia)</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent60"><span>60%</span></div>
-				   	<strong>Spring</strong>
+				   	<!--<div class="progress percent60"><span>60%</span></div> -->
+				   	<strong>Agile, DevOps</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
@@ -229,18 +229,18 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Software Engineer</h3>
+	   					<h3>Senior Software Engineer</h3>
 	   					<p>Feb 2017 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>AdNovum, Singapore</h4>
-	   					<p>Involved in Java web development projects using Magnolia CMS and technology integration with Nevis Security Suite (AdNovum's product)</p>
-              <p><b>Technologies: </b>Java, Magnolia, Nevis Security Suite</p>
+	   					<p>Team Lead, Web application development using Magnolia CMS and Product Integration & solution engineering with Nevis (A product of AdNovum)</p>
+              <p><b>Technologies: </b>Java, Magnolia, Angular, Nevis Security Suite</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
-				
+
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -685,7 +685,7 @@
 
    			<p>
             Singapore<br>
-            321021<br>
+            541268<br>
 
             </p>
 
@@ -699,7 +699,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>me@praveenkumar.io<br>
+   			<p>praveen4890@gmail.com<br>
 
 			   </p>
 
