--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				   </li>
 				   <li>
 				   	<!--<div class="progress percent80"><span>80%</span></div> -->
-				   	<strong>Frontend Development - HTML, CSS, Angular</strong>
+				   	<strong>Frontend Development - Angular</strong>
 				   </li>
 				   <li>
 				   	<!--<div class="progress percent80"><span>80%</span></div> -->
