Added Traveloka experience

--- a/index.html
+++ b/index.html
@@ -222,6 +222,25 @@
 
    			<div class="timeline-wrap">
 
+          <div class="timeline-block">
+
+  	   				<div class="timeline-ico">
+  	   					<i class="fa fa-graduation-cap"></i>
+  	   				</div>
+
+  	   				<div class="timeline-header">
+  	   					<h3>Software Engineer, Backend</h3>
+  	   					<p>Dec 2019 - Present</p>
+  	   				</div>
+
+  	   				<div class="timeline-content">
+  	   					<h4>Traveloka, Singapore</h4>
+  	   					<p>Working as a backend engineer for the Accommodation Partner Integration team on developing and maintaining highly scalable microservices on AWS Cloud Infrastructure for Hotels Search and Booking flow</p>
+                <p><b>Technologies: </b>Java, AWS, Terraform</p>
+  	   				</div>
+
+  	   			</div> <!-- /timeline-block -->
+
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -230,7 +249,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Senior Software Engineer</h3>
-	   					<p>Feb 2017 - Present</p>
+	   					<p>Feb 2017 - Nov 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
